チャット画面のフロント実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,8 +1,8 @@
 <div class="side-bar-header">
-  <div class="user-name">
+  <div class="header-name">
     <a href="#">ikeji</a>
   </div>
-  <div class="chat-create">
+  <div class="create-room">
     <a href="#">チャットを作成する</a>
   </div>
 </div>
